--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
 	},
 	"devDependencies": {
 		"@parcel/config-webextension": "^2.10.3",
+		"eslint": "^8.57.0",
+		"eslint-config-semistandard": "^17.0.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-promise": "^6.1.1",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.10.3",
 		"stylelint": "^15.11.0",
@@ -56,7 +62,7 @@
 		"sourceDir": "distribution",
 		"run": {
 			"startUrl": [
-				"https://github.com/fregante/browser-extension-template"
+				"https://github.com/halkeye/extension-digitalocean-menu-sorter"
 			]
 		}
 	}
