--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"lint": "run-p lint:*",
 		"lint-fix": "run-p 'lint:* -- --fix'",
 		"lint:css": "stylelint source/**/*.css",
-		"lint:js": "xo",
+		"lint:js": "eslint source",
 		"test": "run-p lint:* build",
 		"watch": "parcel watch --no-hmr"
 	},
@@ -13,18 +13,8 @@
 		"last 1 Chrome version",
 		"last 1 Firefox version"
 	],
-	"xo": {
-		"envs": [
-			"browser",
-			"webextensions"
-		],
-		"rules": {
-			"unicorn/prefer-top-level-await": "off"
-		}
-	},
 	"stylelint": {
 		"extends": [
-			"stylelint-config-xo",
 			"stylelint-config-prettier"
 		],
 		"rules": {
@@ -48,9 +38,7 @@
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.10.3",
 		"stylelint": "^15.11.0",
-		"stylelint-config-prettier": "^9.0.5",
-		"stylelint-config-xo": "^0.22.0",
-		"xo": "^0.56.0"
+		"stylelint-config-prettier": "^9.0.5"
 	},
 	"targets": {
 		"default": {
